--- a/WebServer/LoginPage.html
+++ b/WebServer/LoginPage.html
@@ -11,15 +11,15 @@
     </nav>
     <h1>Login</h1>
     <div style="border-bottom-color:black; border:double; width:20%">
-        <form action="/login.php">
+        <form action="http://localhost:65171/api/Users/Login" method="post">
             <table>
-                <tr>
+                <tr>s
                     <th>username:</th>
-                    <th><input type="text" value="" /></th>
+                    <th><input type="text" value="" name="Username" /></th>
                 </tr>
                 <tr>
                     <th>password:</th>
-                    <th><input type="text" value="" /></th>
+                    <th><input type="text" value="" name="Password"/></th>
                 <tr />
                 <tr>
                    <th> <input type="submit" value="Login" /></th>
